# schaufel

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  INTRODUCTION.md  LICENSE  Makefile  Makefile.am  Makefile.global  Makefile.global.in  Makefile.in  README.md  aclocal.m4  configure  configure.ac  contrib.mk  debug.sh
.github/workflows/: build-package.yml  test-pr.yml
contrib/: Makefile
contrib/exports/: Makefile  exports.c  exports.h
contrib/kafka/: Makefile  kafka.c  kafka.h
contrib/postgres/: Makefile  postgres.c  postgres.h
contrib/redis/: Makefile  redis.c
debian/: control  postinst  rules  schaufel.dirs  schaufel.docs  schaufel.install  schaufel.logrotate  schaufel.manpages  schaufel.service  schaufel@.service
doc/: dummy.conf  hooks.conf  schaufel.conf  transactional.conf
m4/: ax_pg_config.m4
man/: CMakeLists.txt  schaufel.1  schaufel.conf.5
sample/: schaufel.conf
scripts/: debug.sh  sanitize.sh
src/: CMakeLists.txt  Makefile.am  bagger.c  bagger.h  consumer.c  consumer.h  dummy.c  dummy.h  exports.c  exports.h  file.c  file.h  hooks.c  hooks.h  json-exports.c  kafka.c  kafka.h  main.c  modules.c  modules.h  postgres.c  postgres.h  producer.c  producer.h  queue.c  queue.h  redis.c  redis.h  schaufel.c  schaufel.h  validator.c  validator.h  version.h
src/hooks/: copy.c  copy.h  dummy.c  dummy.h  jsonexport.c  jsonexport.h  xmark.c  xmark.h
src/include/: build.h  build.h.in  config.h  config_paths.h  dummy.h  modules.h  paths.h  producer.h  queue.h
src/include/test/: test.h
src/include/utils/: array.h  config.h  scalloc.h
src/test/: test.h
src/utils/: array.c  array.h  bintree.c  bintree.h  config.c  config.h  endian.h  fnv.c  fnv.h  helper.c  helper.h  htable.c  htable.h  logger.c  logger.h  metadata.c  metadata.h  murmur.c  murmur.h  options.h  portable_endian.h  postgres.c  postgres.h  scalloc.c  scalloc.h  strlwr.c  strlwr.h
t/: CMakeLists.txt  Makefile.am  array.c  bintree_test.c  config_merge_test.c  config_test.c  dummy_consumer_test.c  dummy_producer_test.c  file_consumer_test.c  fnv_test.c  hooks_test.c  htable_test.c  jsonexports_test.c  kafka_validator.c  logger_test.c  logparse_test.c  metadata_test.c  parse_connstring.c  parse_hostinfo.c  queue_test.c  strlwr_test.c
