AC_PREREQ([2.60])
AC_INIT([schaufel], [0.11], [ops@adjust.com])
AM_INIT_AUTOMAKE([-Wall subdir-objects])
AC_MSG_NOTICE([Hello World!])

AC_DEFINE([_GNU_SOURCE], 1, [Enable _GNU_SOURCE])
AC_CONFIG_HEADERS([config.h])

# Check for C compiler
AC_PROG_CC

AC_CONFIG_FILES([
    Makefile
    src/Makefile
])
AC_OUTPUT
